# xlayoutdisplay

./: .ccls  .editorconfig  .gitignore  .xLayoutDisplays  .xlayoutdisplay  99-xlayoutdisplay.rules  CMakeLists.txt  Makefile  NOTICE  README.md  config.mk  main.cpp  xLayoutDisplays.cpp
src/: Displ.cpp  Displ.h  Edid.cpp  Edid.h  Laptop.cpp  Laptop.h  Layout.cpp  Layout.h  Mode.cpp  Mode.h  Monitors.cpp  Monitors.h  Output.cpp  Output.h  Pos.h  Settings.cpp  Settings.h  XRRWrapper.h  XrrWrapper.h  arrangement.cpp  arrangement.h  calculations.cpp  calculations.h  edidConsts.h  laptop.cpp  laptop.h  layout.cpp  layout.h  macros.h  main.cpp  util.h  xLayoutDisplays.cpp  xLayoutDisplays.h  xrandrrutil.c  xrandrrutil.cpp  xrandrrutil.h  xrdbutil.cpp  xrdbutil.h  xutil.cpp  xutil.h
test/: main.cpp  test-Displ.cpp  test-Edid.cpp  test-Laptop.cpp  test-MockEdid.h  test-MockMonitors.h  test-Mode.cpp  test-Monitors.cpp  test-Output.cpp  test-Settings.cpp  test-arrangement.cpp  test-calculations.cpp  test-laptop.cpp  test-layout.cpp  test-xrandrutil.cpp  test-xrdbutil.cpp
